--- a/styles/general.css
+++ b/styles/general.css
@@ -342,7 +342,7 @@ transform: translateY(4px);
     z-index: 2; /* Make sure it does not overlap */
     border: none; /* Remove borders */
     outline: none; /* Remove outline */
-    background-color: white;
+    background-color: #F6F6F6;  
     color: white; /* Text color */
     cursor: pointer; /* Add a mouse pointer on hover */
     padding: 3px; /* Some padding */
